...
            )
        }
    }
}


const val search_text_field_test_tag = "search_text_field_test_tag"
const val search_button_test_tag = "search_button_test_tag"
const val results_section_test_tag = "results_section_test_tag"
const val loading_indication_test_tag = "loading_indication_test_tag"
