...
                onBackPressed = {}
            )
        }
    }
}

const val back_button_test_tag = "back_button_test_tag"
const val title_text_test_tag = "title_text_test_tag"
const val director_text_test_tag = "director_text_test_tag"
const val writer_text_test_tag = "writer_text_test_tag"
const val loading_indication_test_tag = "loading_indication_test_tag"
